--- a/app/src/main/res/drawable/shape_foggy_square.xml
+++ b/app/src/main/res/drawable/shape_foggy_square.xml
@@ -9,7 +9,7 @@
         android:height="200dp"
         />
 
-    <stroke
-        android:width="2dp"
-        android:color="@color/white"/>
+    <solid
+        android:color="#0DC3B5B5"
+        />
 </shape>
