--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,135 +90,35 @@
         android:id="@+id/setting_btn"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginEnd="20dp"
         android:layout_weight="1"
         android:src="@drawable/ic_setting"
         app:layout_constraintBottom_toBottomOf="@+id/lenar_status_layout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/lenar_status_layout"
+        app:layout_constraintTop_toTopOf="@+id/lenar_status_layout" />
+
+    <ImageView
+        android:id="@+id/layout_mini_btn"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_weight="1"
+        android:src="@drawable/ic_minimize_2"
+        app:layout_constraintBottom_toBottomOf="@+id/lenar_status_layout"
+        app:layout_constraintEnd_toStartOf="@+id/lenar_status_layout"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/lenar_status_layout" />
 
 
-    <LinearLayout
+    <fragment
+        android:id="@+id/mini_setting_layout"
+        android:name="com.example.lenarv03.utils.FragmentMiniSetting"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:paddingHorizontal="20dp"
-        android:background="@color/main_theme_color"
-        android:layout_marginBottom="170dp"
-        android:orientation="horizontal"
-        android:weightSum="4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="20dp">
-
-        <LinearLayout
-            android:id="@+id/info_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/info_btn_image"
-                android:layout_width="13dp"
-                android:layout_height="13dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_info" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:text="240P 30FPS"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/displaymode_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/displaymode_btn_image"
-                android:layout_width="13dp"
-                android:layout_height="13dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_maximize_2" />
-
-            <TextView
-                android:id="@+id/displaymode_btn_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:text="Display : Max"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/alarm_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/alarm_btn_image"
-                android:layout_width="13dp"
-                android:layout_height="13dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_bell" />
-
-            <TextView
-                android:id="@+id/alarm_btn_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:text="Alarm : On"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/mic_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/mic_btn_image"
-                android:layout_width="13dp"
-                android:layout_height="13dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_mic" />
-
-            <TextView
-                android:id="@+id/mic_btn_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:text="Mic : On"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
-        </LinearLayout>
-
-    </LinearLayout>
-
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="130dp"
+        tools:layout="@layout/fragment_mini_setting" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/reconnect_layout"
