--- a/app/src/main/res/layout/fragment_mini_setting.xml
+++ b/app/src/main/res/layout/fragment_mini_setting.xml
@@ -5,212 +5,76 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/mini_setting_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/main_theme_color"
-        android:orientation="horizontal"
-        android:paddingHorizontal="0dp"
-        android:weightSum="4"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="200dp"
+        android:orientation="vertical"
+        android:weightSum="2"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/info_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:weightSum="5">
 
-            <ImageView
-                android:id="@+id/info_btn_image"
-                android:layout_width="13dp"
-                android:layout_height="13dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_info" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:text="240P 30FPS"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:src="@drawable/ic_volume_up"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/displaymode_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/displaymode_btn_image"
-                android:layout_width="13dp"
-                android:layout_height="13dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_panorama_angle" />
 
-            <TextView
-                android:id="@+id/displaymode_btn_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:gravity="center"
-                android:text="16 : 9"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/sound_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/sound_btn_image"
-                android:layout_width="13dp"
-                android:layout_height="13dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_volume_up" />
-
-            <TextView
-                android:id="@+id/sound_btn_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:text="Sound : On"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
         </LinearLayout>
 
 
-        <LinearLayout
-            android:id="@+id/mic_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/mic_btn_image"
-                android:layout_width="13dp"
-                android:layout_height="13dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_mic" />
-
-            <TextView
-                android:id="@+id/mic_btn_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:text="Mic : On"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/fov_setting_layout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/main_theme_color"
-        android:orientation="horizontal"
-        android:paddingHorizontal="40dp"
-        android:weightSum="3"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/mini_setting_layout">
-
-        <LinearLayout
-            android:id="@+id/fov16_9_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_panorama_angle" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:gravity="center"
-                android:text="16:9"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/fov4_3_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_normal_angle" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:text="4:3"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/fov1_1_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_square_angle" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/robotolight"
-                android:text="1:1"
-                android:textColor="@color/white"
-                android:textSize="8dp" />
-        </LinearLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
