--- a/app/src/main/res/drawable/shape_color_roundsquare.xml
+++ b/app/src/main/res/drawable/shape_color_roundsquare.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="10dp"
+        android:radius="5dp"
         />
 
     <size
-        android:width="200dp"
-        android:height="200dp"
+        android:width="20dp"
+        android:height="20dp"
         />
 
     <solid
-        android:color="#1A5C5B5B"
+        android:color="#09509C"
         />
 </shape>
