--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background2"
+        android:background="@drawable/background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
