--- a/app/src/main/res/drawable/shape_color_roundsquare.xml
+++ b/app/src/main/res/drawable/shape_color_roundsquare.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="5dp"
+        android:radius="15dp"
         />
 
     <size
-        android:width="20dp"
-        android:height="20dp"
+        android:width="150dp"
+        android:height="50dp"
         />
 
     <solid
-        android:color="#09509C"
+        android:color="#253867"
         />
 </shape>
