--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -15,41 +15,42 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:fontFamily="@font/robotolight"
-        android:text="LENAR IS READY"
+        android:text="SELCECT MODE"
         android:textColor="@color/white"
-        android:textSize="20dp"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-    <ImageView
-        android:id="@+id/background_circle"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:alpha="0.4"
-        android:src="@drawable/abstract_circle"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        android:textSize="16dp"
+        android:gravity="center"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:alpha="0.9"
-        android:src="@drawable/lenar_wallpaper1"
+        android:alpha="0.7"
+        android:src="@drawable/lenar1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3" />
+
+    <ImageView
+        android:id="@+id/background_circle"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:alpha="1"
+        android:src="@drawable/light2"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.238"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.69" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/video_select_btn"
@@ -118,6 +119,7 @@
         android:background="@drawable/shape_color_roundsquare2"
         android:padding="10dp"
         android:layout_marginTop="20dp"
+        android:onClick="live_btn_click"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/video_select_btn">
