--- a/app/src/main/res/layout/activity_liveyoutube.xml
+++ b/app/src/main/res/layout/activity_liveyoutube.xml
@@ -84,7 +84,7 @@
                 android:background="@drawable/shape_color_roundsquare2"
                 android:fontFamily="@font/robotolight"
                 android:gravity="center"
-                android:text="josh@gmail.com"
+                android:text="null"
                 android:textColor="@color/white"
                 android:textSize="12dp"
                 android:visibility="visible" />
@@ -103,12 +103,44 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/robotolight"
                 android:gravity="start"
-                android:text="Live Stream Title"
+                android:text="Live stream Title"
                 android:textColor="@color/white"
                 android:textSize="12dp" />
 
 
             <EditText
+                android:id="@+id/live_stream_title_text"
+                android:layout_width="0dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="25dp"
+                android:layout_weight="1"
+                android:background="@drawable/shape_color_roundsquare2"
+                android:fontFamily="@font/robotolight"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:visibility="visible" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="30dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/robotolight"
+                android:gravity="start"
+                android:text="Live stream Description"
+                android:textColor="@color/white"
+                android:textSize="12dp" />
+
+
+            <EditText
+                android:id="@+id/live_stream_desc_text"
                 android:layout_width="0dp"
                 android:layout_height="25dp"
                 android:layout_marginEnd="25dp"
