--- a/app/src/main/res/drawable/shape_color_roundsquare4.xml
+++ b/app/src/main/res/drawable/shape_color_roundsquare4.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-
-
     <corners
-        android:radius="15dp"
+        android:topLeftRadius="30dp"
+        android:topRightRadius="30dp"
         />
+
     <size
-        android:width="200dp"
-        android:height="200dp"
+        android:width="500dp"
+        android:height="500dp"
         />
 
     <solid
-        android:color="#0DC3B5B5"
+        android:color="#4F6395"
         />
 </shape>
