--- a/app/src/main/res/layout/activity_live_setting.xml
+++ b/app/src/main/res/layout/activity_live_setting.xml
@@ -13,7 +13,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:background="@drawable/shape_color_roundsquare4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/menu_before_btn"
@@ -40,54 +46,70 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <ImageView
-        android:id="@+id/google_account_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:scaleType="centerCrop"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
-
-
-    <TextView
-        android:id="@+id/google_account_text"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:fontFamily="@font/robotolight"
-        android:gravity="center"
-        android:text="google_account"
-        android:textColor="@color/white"
-        android:textSize="12dp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/google_account_image" />
-
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="200dp"
+        android:layout_height="70dp"
         android:id="@+id/logout_btn"
-        android:layout_width="80dp"
-        android:layout_height="25dp"
-        android:background="@drawable/shape_color_roundsquare"
-        android:fontFamily="@font/robotolight"
-        android:gravity="center"
-        android:text="Log out"
-        android:textColor="@color/white"
-        android:textSize="12dp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/google_account_text"
-        app:layout_constraintStart_toStartOf="@+id/google_account_text"
-        app:layout_constraintTop_toBottomOf="@+id/google_account_text" />
+        android:background="@drawable/shape_color_roundsquare3"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView14">
+
+        <ImageView
+            android:id="@+id/google_account_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="300dp"
         android:orientation="vertical"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/logout_btn">
+        app:layout_constraintTop_toTopOf="@+id/imageView7">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/google_account_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="30dp"
+                android:layout_weight="3"
+                android:fontFamily="@font/robotolight"
+                android:gravity="start"
+                android:text="ID"
+                android:textColor="@color/white"
+                android:textSize="12dp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="25dp"
+                android:layout_weight="1"
+                android:background="@drawable/shape_color_roundsquare"
+                android:fontFamily="@font/robotolight"
+                android:gravity="center"
+                android:text="Log out"
+                android:textColor="@color/white"
+                android:textSize="12dp" />
+
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -114,19 +136,20 @@
                 android:layout_marginEnd="25dp"
                 android:layout_weight="2"
                 android:background="@drawable/shape_color_roundsquare2"
+                android:cursorVisible="false"
                 android:fontFamily="@font/robotolight"
                 android:gravity="center"
-                android:textColor="@color/white"
+                android:imeOptions="actionDone"
                 android:inputType="text"
                 android:maxLines="1"
-                android:imeOptions="actionDone"
+                android:textColor="@color/white"
                 android:visibility="visible" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="15dp">
 
             <TextView
                 android:layout_width="0dp"
@@ -148,11 +171,12 @@
                 android:layout_marginEnd="25dp"
                 android:layout_weight="2"
                 android:background="@drawable/shape_color_roundsquare2"
+                android:cursorVisible="false"
                 android:fontFamily="@font/robotolight"
                 android:gravity="center"
+                android:imeOptions="actionDone"
                 android:inputType="text"
                 android:maxLines="1"
-                android:imeOptions="actionDone"
                 android:textColor="@color/white"
                 android:visibility="visible" />
         </LinearLayout>
@@ -160,7 +184,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="15dp">
 
             <TextView
                 android:layout_width="0dp"
@@ -220,11 +244,65 @@
                 android:visibility="visible" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="30dp"
+                android:layout_weight="5"
+                android:fontFamily="@font/robotolight"
+                android:gravity="start"
+                android:text="Private"
+                android:textColor="@color/white"
+                android:textSize="12dp" />
+
+            <CheckBox
+                android:id="@+id/broadcast_mode_chkbox"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:button="@drawable/custom_checkbox"
+                android:gravity="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="30dp"
+                android:layout_weight="5"
+                android:fontFamily="@font/robotolight"
+                android:gravity="start"
+                android:text="Kids content"
+                android:textColor="@color/white"
+                android:textSize="12dp" />
+
+            <CheckBox
+                android:id="@+id/kids_content_chkbox"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:button="@drawable/custom_checkbox"
+                android:gravity="center" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/live_start_btn"
+        android:id="@+id/live_set_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="80dp"
@@ -245,7 +323,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
