--- a/app/src/main/res/layout/activity_live_setting.xml
+++ b/app/src/main/res/layout/activity_live_setting.xml
@@ -16,10 +16,12 @@
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
         android:background="@drawable/shape_color_roundsquare4"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/menu_before_btn"
@@ -46,75 +48,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="200dp"
-        android:layout_height="70dp"
-        android:id="@+id/logout_btn"
-        android:background="@drawable/shape_color_roundsquare3"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14">
-
-        <ImageView
-            android:id="@+id/google_account_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="@+id/imageView7">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:id="@+id/logout_btn"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView14">
+
+            <ImageView
+                android:id="@+id/google_account_image"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/google_account_text"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="30dp"
-                android:layout_weight="3"
-                android:fontFamily="@font/robotolight"
-                android:gravity="start"
-                android:text="ID"
-                android:textColor="@color/white"
-                android:textSize="12dp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="25dp"
-                android:layout_weight="1"
-                android:background="@drawable/shape_color_roundsquare"
                 android:fontFamily="@font/robotolight"
                 android:gravity="center"
-                android:text="Log out"
+                android:text="ID"
                 android:textColor="@color/white"
-                android:textSize="12dp" />
+                android:textSize="12dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="@+id/google_account_image"
+                app:layout_constraintStart_toStartOf="@+id/google_account_image"
+                app:layout_constraintTop_toBottomOf="@+id/google_account_image" />
 
-
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="40dp">
 
             <TextView
                 android:layout_width="0dp"
@@ -138,6 +120,7 @@
                 android:background="@drawable/shape_color_roundsquare2"
                 android:cursorVisible="false"
                 android:fontFamily="@font/robotolight"
+                android:textSize="12dp"
                 android:gravity="center"
                 android:imeOptions="actionDone"
                 android:inputType="text"
@@ -174,6 +157,7 @@
                 android:cursorVisible="false"
                 android:fontFamily="@font/robotolight"
                 android:gravity="center"
+                android:textSize="12dp"
                 android:imeOptions="actionDone"
                 android:inputType="text"
                 android:maxLines="1"
@@ -309,6 +293,7 @@
         android:layout_marginBottom="40dp"
         android:background="@drawable/shape_color_roundsquare"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         tools:layout_editor_absoluteX="80dp">
 
         <TextView
